# module-cli

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
src/: _starter.py  module_cli.py
tests/: e2e_test.py
