[tool.poetry]
name = "module-cli"
version = "22.4.2"
description = "Bootstrap extensible single-module python CLIs"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]
license = "MIT"

readme = "README.md"

keywords = ["cli", "argparse", "tool"]

homepage = "https://github.com/andrewrosss/module-cli"
repository = "https://github.com/andrewrosss/module-cli"
documentation = "https://github.com/andrewrosss/module-cli"

classifiers = [
    "Programming Language :: Python :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.4"
reorder-python-imports = "^3.0.1"
bump2version = "^1.0.1"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
module-cli = "module_cli:cli"
mcli = "module_cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
